--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                                                                   n                 <html>
+<html>
 <head>
 
     <title>Secrets In Case Of Death</title>
